# PyPerfOptimizer

./: .gitignore  .replit  CONTRIBUTING.md  DEPLOYMENT.md  FOR_DEVELOPERS.md  MANIFEST.in  README.md  main.py  publish.sh  pyproject.toml  setup.py
.github/workflows/: ci.yml  python-package.yml
attached_assets/: Pasted--PyPerfOptimizer-A-comprehensive-Python-package-for-unified-performance-profiling-visualization--1744314338353.txt  Pasted-Critical-Gaps-and-Recommendations-1-Methodology-Transparency-Issue-Missing-details-on-test-env-1744318051280.txt
benchmarks/: README.md  RESULTS.txt  bench_regex.py  real_world_scan.txt  run_benchmarks.py  scan_real_projects.py
docs/: _config.yml  case_studies.md  developer_workflow.html  index.md
docs/test_results/: README.md  comparative_benchmarks.md  cpu_profiler_tests.md  index.md  line_profiler_tests.md  memory_profiler_tests.md  methodology.md  optimization_case_studies.md  optimization_code_examples.md  performance_variance.md  reproducibility.md  running_tests.md  summary.md
examples/: automation_example.py  integrated_dashboard.py  memory_optimization.py  simple_profiling.py
src/pyperfoptimizer/: __init__.py  __main__.py  cli.py
src/pyperfoptimizer/advisor/: __init__.py  compile_advisor.py
src/pyperfoptimizer/autofix/: __init__.py  engine.py  profile_loader.py  verify.py
src/pyperfoptimizer/autofix/patterns/: __init__.py  append_to_comprehension.py  auto_memoize.py  base.py  chained_comparison.py  dataframe_vectorize.py  defaultdict_opportunity.py  dict_get.py  exception_control_flow.py  generator_instead_of_list.py  loop_invariant.py  loop_to_any_all.py  membership_test.py  multiple_isinstance.py  regex_precompile.py  repeated_attr_in_loop.py  string_concat.py  unnecessary_copy.py  unnecessary_list.py
src/pyperfoptimizer/optimizer/: __init__.py  code_analyzer.py  optimizations.py  recommendations.py
src/pyperfoptimizer/profiler/: __init__.py  cpu_profiler.py  line_profiler.py  memory_profiler.py  profile_manager.py
src/pyperfoptimizer/utils/: __init__.py  context_managers.py  decorators.py  io.py
src/pyperfoptimizer/visualizer/: __init__.py  cpu_visualizer.py  dashboard.py  memory_visualizer.py  timeline_visualizer.py
templates/: index.html  results.html
tests/: __init__.py
tests/test_advisor/: test_compile_advisor.py
tests/test_autofix/: __init__.py  test_dataframe.py  test_memoize.py  test_new_patterns.py  test_patterns.py  test_profile_loader.py  test_regex_transform.py
tests/test_optimizer/: __init__.py  test_code_analyzer.py  test_recommendations.py
tests/test_profiler/: __init__.py  test_cpu_profiler.py  test_line_profiler.py  test_memory_profiler.py
tests/test_visualizer/: __init__.py  test_cpu_visualizer.py  test_memory_visualizer.py
