[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyperfoptimizer"
version = "0.2.1"
description = "A comprehensive Python package for unified performance profiling, visualization, and optimization"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Syed Annas", email = "ammas.mazhar10@gmail.com"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "astor>=0.8.1",
    "libcst>=1.0.0",
    "line-profiler>=4.1.0",
    "memory-profiler>=0.61.0",
    "matplotlib>=3.7.0",
    "plotly>=5.15.0",
    "flask>=2.3.0",
]

[project.urls]
Homepage = "https://github.com/AnnasMazhar/PyPerfOptimizer"
"Bug Tracker" = "https://github.com/AnnasMazhar/PyPerfOptimizer/issues"

[project.scripts]
pyperfoptimizer = "pyperfoptimizer.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pyperfoptimizer = ["templates/*.html"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501", "F401", "E722"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501", "F401", "F811", "I001"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
